# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.60 2004/06/08 04:07:34 zhen Exp $

  08 Jun 2004; John Davis <zhen@gentoo.org> modules/builder.py,
  modules/catalyst_support.py, modules/livecd_stage2_target.py:
  livecd-stage2 traced back when boot/kernel/x/config was an empty string, fixed
  the code to give a nice error msg instead of a cryptic traceback

  04 Jun 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  small fix for bootsplash, needed to link clst_livecd_bootsplash to
  /etc/bootsplash/default

  04 Jun 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-preclean-chroot.sh, targets/grp/grp-chroot.sh,
  targets/grp/grp-preclean-chroot.sh, targets/grp/grp.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh, targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-preclean1-chroot.sh, targets/stage1/stage1.sh,
  targets/stage2/stage2-chroot.sh, targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-chroot.sh, targets/stage3/stage3-preclean-chroot.sh,
  targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh,
  targets/tinderbox/tinderbox.sh:
  Fixes bug 51603, a lot of distcc fixups (has to do w/ bind mounts and such)

  02 Jun 2004; John Davis <zhen@gentoo.org> modules/snapshot_target.py:
  Fixes to address bugs #51072 and #52045. The snapshot logic was tweaked to be
  more efficient, and I added a new snapshot specfile option, portdir_overlay.
  It should be a full path pointing to a portage overlay dir.

  27 May 2004; John Davis <zhen@gentoo.org>
  livecd/cdtar/silo-1.3.1-cdtar.tar.bz2,
  livecd/cdtar/silo-1.3.2-sparc64-cdtar.tar.bz2,