@@ -1,6 +1,16 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.60 2004/06/08 04:07:34 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.61 2004/06/10 15:55:11 zhen Exp $
+
+  10 Jun 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript-support/kmerge.sh,
+  livecd/runscript-support/livecdfs-update.sh,
+  livecd/runscript-support/post-kmerge.sh,
+  livecd/runscript-support/pre-kmerge.sh:
+  two new functions for livecd-stage2: livecd/rcadd and livecd/rcdel. these two
+  functions control what scripts are added to their respective runlevels. This
+  option would be specified like so in the spec file: livecd/rcadd:
+  metalog:default foo:boot. the syntax is the same for livecd/rcdel.
 
   08 Jun 2004; John Davis <zhen@gentoo.org> modules/builder.py,
   modules/catalyst_support.py, modules/livecd_stage2_target.py:
